PeriodicShardedTimeseriesShardkeyChecker must gracefully handle any kind of exception

XMLWordPrintableJSON

    • Type: Bug
    • Resolution: Fixed
    • Priority: Major - P3
    • 8.1.0-rc0, 8.0.4
    • Affects Version/s: 8.0.0-rc18
    • Component/s: None
    • None
    • Catalog and Routing
    • Fully Compatible
    • ALL
    • v8.0
    • CAR Team 2024-09-02
    • 200
    • None
    • None
    • None
    • None
    • None
    • None
    • None

      SERVER-88647 added a periodic job checking for timeseries shard keys in a try-catch block assuming checkTimeseriesShardKeys could only throw cancellation exceptions. This is not the case because also other kind of errors may be hit (e.g. PrimarySteppedDown when a shard steps down).

      Since in general no exception must be thrown in the body of periodic jobs, we should consider a more conservative approach and catch all type of errors here to prevent crashing the process.

            Assignee:
            Pierlauro Sciarelli
            Reporter:
            Pierlauro Sciarelli
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

              Created:
              Updated:
              Resolved: