SERVER-94060 PeriodicShardedTimeseriesShardkeyChecker must gracefully handle any kind of exception (#26539)

GitOrigin-RevId: 01c9c9825944b8c2524161b056c0309326c36898